@@ -1,4 +1,4 @@
-/* Copyright (C) 1995-2000, 2001, 2002 Free Software Foundation, Inc.
+/* Copyright (C) 1995-2000, 2001, 2002, 2004 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Ulrich Drepper <drepper@gnu.org>, 1995.
 
@@ -76,7 +76,7 @@ const struct locale_data _nl_C_LC_TIME attribute_hidden =
     { .string = "%m/%d/%y" },
     { .string = "%H:%M:%S" },
     { .string = "%I:%M:%S %p" },
-    { .string = NULL },
+    { .string = "" },
     { .string = "" },
     { .string = "" },
     { .string = "" },
